Small bug on small screens removed

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,13 +1,13 @@
 .footer{
     margin-top: 80px;
-    margin-bottom: -20px;
+    margin-bottom: -10px;
     @media only screen and (max-width:768px) {
         margin:0 auto;
     
     }
 }
 .footer-nav{
-    margin: 2rem 1.8rem 1rem 0;
+    margin: 2.8rem 1.8rem 0 0;
     
     list-style-type: none;
     justify-content: space-around;
